<resources>
    <string name="app_name">My Android Labs</string>
    <string name="title_activity_main">Main UI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_toast">ToastActivity</string>
    <string name="title_activity_control_ui">控制UI界面</string>
    <string name="title_activity_xml_ui">使用XML布局文件控制UI界面</string>
    <string name="title">使用XML布局文件控制UI界面</string>
    <string name="title_activity_code_ui">CodeUI</string>
    <string name="title_activity_layout_mgr">LayoutMgr</string>
    <string name="title_activity_basic_component">BasicComponent</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_alert_dialog">AlertDialog</string>

    <string name="text_control_ui">control UI layout</string>
    <string name="text_layout_manager">layout manager</string>
    <string name="text_basic_control">basic control</string>
    <string name="text_toast_demo">Toast demo</string>
    <string name="text_notification">Notification</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">帐 户:</string>
    <string name="password">密 码:</string>
    <string name="username_hint">请输入用户名或手机号</string>
    <string name="password_hint">请输入密码</string>

    <string name="text_style_and_theme">Styles and Themes</string>

</resources>
